BA-281 fix all components not showing linebreaks properly

--- a/web/wp-content/themes/borealis-2021/src/sass/style.scss
+++ b/web/wp-content/themes/borealis-2021/src/sass/style.scss
@@ -21,6 +21,11 @@
   .black-underline {
     @apply before:bg-shade-black-400;
   }
+  .tab-container {
+    .custom-video-panel {
+      @apply w-full;
+    }
+  }
   .pill {
     @apply border border-shade-black-400 px-4 py-1 rounded-pill inline-block text-center paragraph-sm;
   }
